--- a/src/styles.css
+++ b/src/styles.css
@@ -1,32 +1,32 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 @theme {
-	--color-background: var(--color-background);
-	--color-foreground: var(--color-foreground);
+  --color-background: var(--color-background);
+  --color-foreground: var(--color-foreground);
 }
 
 .light {
-	--color-background: var(--color-neutral-100);
-	--color-foreground: var(--color-neutral-900);
+  --color-background: var(--color-neutral-100);
+  --color-foreground: var(--color-neutral-900);
 }
 
 .dark {
-	--color-background: var(--color-neutral-900);
-	--color-foreground: var(--color-neutral-100);
+  --color-background: var(--color-neutral-900);
+  --color-foreground: var(--color-neutral-100);
 }
 
 .system {
-	@media (prefers-color-scheme: dark) {
-		--color-background: var(--color-neutral-900);
-		--color-foreground: var(--color-neutral-100);
-	}
-	@media (prefers-color-scheme: light) {
-		--color-background: var(--color-neutral-100);
-		--color-foreground: var(--color-neutral-900);
-	}
+  @media (prefers-color-scheme: dark) {
+    --color-background: var(--color-neutral-900);
+    --color-foreground: var(--color-neutral-100);
+  }
+  @media (prefers-color-scheme: light) {
+    --color-background: var(--color-neutral-100);
+    --color-foreground: var(--color-neutral-900);
+  }
 }
 
 :root {
-	background-color: var(--color-background);
-	color: var(--color-foreground);
+  background-color: var(--color-background);
+  color: var(--color-foreground);
 }
